base/src/test/resources/failure/levels/wrong-level.aya.txt
In file $FILE:4:18 ->

  2 | ulevel u
  3 | hlevel h
  4 | def neg (A : Type u u) : Type (lsuc h) (lsuc u) => A -> Empty
                        ^^
  
Error: I don't want a ulevel here, please use the other one
What are you doing?
